# coin-flip-examples

./: .gitignore  LICENSE  README.md  babel.config.json  package-lock.json  package.json
.github/workflows/: nextjs.yml  tests-rs.yml  tests-ts.yml  tests.yml
contract/: README.md  package-lock.json  package.json
contract-rs/: Cargo.toml  README.md  test.sh
contract-rs/sandbox-rs/: Cargo.toml
contract-rs/sandbox-rs/src/: tests.rs
contract-rs/src/: lib.rs
contract-rs/tests/: tests.rs
contract-ts/: README.md  package.json
contract-ts/integration-tests/: package.json
contract-ts/integration-tests/src/: main.ava.ts
contract-ts/sandbox-test/: main.ava.js
contract-ts/sandbox-ts/: main.ava.ts
contract-ts/src/: contract.ts
contract/src/: contract.ts
frontend/: App.js  config.js  index.html  index.js  near-api.js  near-interface.js  near-wallet.js  next.config.js  package.json  start.sh  ui-components.js  utils.js
frontend/assets/: global.css
frontend/assets/css/: global.css
frontend/cypress/: coin-flip.cy.js
frontend/src/: config.js  layout.js
frontend/src/components/: CoinGame.jsx  Navigation.jsx
frontend/src/components/Coin/: index.jsx
frontend/src/pages/: _app.js  index.js
frontend/src/styles/: app.module.css  globals.css
frontend/src/wallets/: near-wallet.js  near.js  web3modal.js
frontend/utils/: utils.js
frontend_old/: index.js  near-wallet.js  package.json
frontend_old/cypress/: cypres.config.js
integration-tests/: package-lock.json
integration-tests/src/: main.ava.ts
src/: index.js  index.ts
